# hook-rs

./: Cargo.toml  README.md
.claude/: CLAUDE.md
.github/workflows/: ci-cd.yml
src/: check.rs  command.rs  evaluate.rs  hook.rs  lib.rs  main.rs  prelude.rs  types.rs
src/bash/: bash_evaluator.rs  bash_handler.rs  bash_parser.rs  mod.rs
src/bash/rules/: allow_safe.rs  cd_git.rs  chained_push.rs  fd.rs  find.rs  gh.rs  git_allow.rs  git_c.rs  git_deny.rs  insta.rs  journalctl.rs  long_python.rs  mod.rs  modern_alternatives.rs  rm.rs
src/bash/schema/: arg.rs  bash_rule.rs  complete_rule.rs  mod.rs  simple_rule.rs
src/bash/snapshots/: claude_hooks__bash__bash_parser__tests__command_substitution_backtick.snap  claude_hooks__bash__bash_parser__tests__command_substitution_dollar.snap  claude_hooks__bash__bash_parser__tests__command_substitution_in_arg.snap  claude_hooks__bash__bash_parser__tests__complex_multi_statement_with_substitutions_and_redirects.snap  claude_hooks__bash__bash_parser__tests__for_loop.snap  claude_hooks__bash__bash_parser__tests__heredoc_quoted_tag_in_chained_command.snap  claude_hooks__bash__bash_parser__tests__inner_command_with_args.snap  claude_hooks__bash__bash_parser__tests__multiple_substitutions_in_one_command.snap  claude_hooks__bash__bash_parser__tests__no_space_before_and.snap  claude_hooks__bash__bash_parser__tests__parameter_expansion_braced.snap  claude_hooks__bash__bash_parser__tests__parameter_expansion_length.snap  claude_hooks__bash__bash_parser__tests__parameter_expansion_simple.snap  (+32 more)
src/checks/: cd_git.rs  chained_push.rs  echo_separator.rs  find_delete.rs  gh_cli.rs  git_approval.rs  git_checkout.rs  git_reset.rs  git_stash.rs  insta_review.rs  long_python.rs  mod.rs  rm.rs
src/grep/: grep_handler.rs  grep_rule.rs  mod.rs
src/logic/: evaluate.rs  evaluate_read.rs  mod.rs  parse.rs  read_rule_factory.rs  run.rs
src/paths/: glob_handler.rs  grep_handler.rs  mod.rs  path_rule.rs  path_rule_factory.rs  read_handler.rs
src/read/: mod.rs  read_handler.rs  read_rule.rs
src/rules/: allow_safe.rs  cd_git.rs  chained_push.rs  echo_separator.rs  find.rs  gh.rs  git.rs  git_allow.rs  git_approval.rs  git_c.rs  git_checkout.rs  git_deny.rs  insta.rs  long_python.rs  mod.rs  rm.rs
src/schema/: cli.rs  complete_rule.rs  context.rs  handler.rs  hook_input.rs  hook_output.rs  mod.rs  outcome.rs  rule_factory.rs  settings.rs  simple_rule.rs  skip_reason.rs
src/utils/: git.rs  glob.rs  logging.rs  mod.rs  path_helpers.rs  path_rule_factory.rs  report.rs
(+455 files in other folders)
