[package]
name = "hook-rs"
version = "0.0.0"
edition = "2024"
description = "Permission hooks for Claude Code with bash-aware command analysis"
license = "AGPL-3.0-only"
repository = "https://github.com/StudioLE/hook-rs"

[profile.release]
strip = true

[dependencies]
argh = "0.1.19"
brush-parser = { git = "https://github.com/StudioLE/brush", rev = "61f64c63e3bc2465e60846a8fad6a2c7137153ae" }
dirs = "6.0.0"
globset = "0.4.18"
studiole-report = { version = "0.1.0", features = ["render"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tracing = "0.1.44"
# v0.3.20 breaks ANSI colors in the terminal
tracing-subscriber = "=0.3.19"

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
absolute_paths = "warn"
arithmetic_side_effects = "allow"
as_conversions = "warn"
await_holding_lock = "warn"
cast_possible_truncation = "warn"
clone_on_ref_ptr = "allow"
enum_glob_use = "allow"
expect_used = "allow"
explicit_iter_loop = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
get_first = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_return = "allow"
indexing_slicing = "warn"
integer_division = "warn"
just_underscores_and_digits = "allow"
match_same_arms = "warn"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_inline_in_public_items = "allow"
missing_panics_doc = "allow"
mod_module_files = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
neg_multiply = "allow"
new_without_default = "allow"
non_ascii_literal = "allow"
panic = "warn"
pattern_type_mismatch = "allow"
pub_use = "allow"
question_mark_used = "allow"
result_large_err = "warn"
separated_literal_suffix = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
str_to_string = "warn"
string_add = "allow"
tests_outside_test_module = "allow"
type_complexity = "allow"
unneeded_wildcard_pattern = "warn"
unreadable_literal = "allow"
unseparated_literal_suffix = "warn"
unused_self = "warn"
unwrap_used = "warn"
used_underscore_items = "allow"
wildcard_enum_match_arm = "allow"
wildcard_imports = "allow"
wrong_self_convention = "allow"

[lints.rust]
non_snake_case = "allow"
